--- a/ImageFeed/Base.lproj/LaunchScreen.storyboard
+++ b/ImageFeed/Base.lproj/LaunchScreen.storyboard
@@ -22,12 +22,13 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="YP Black"/>
+                        <color key="backgroundColor" name="YP Background"/>
                         <constraints>
                             <constraint firstItem="whf-Me-j7F" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="8h7-6K-Wub"/>
                             <constraint firstItem="whf-Me-j7F" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="NLN-eB-TaG"/>
                         </constraints>
                     </view>
+                    <nil key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -36,8 +37,8 @@
     </scenes>
     <resources>
         <image name="Vector" width="75" height="78"/>
-        <namedColor name="YP Black">
-            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="YP Background">
+            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="0.49599999189376831" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
